--- a/Modulo_02_03_04_05_Codigo/assets/css/contacto.css
+++ b/Modulo_02_03_04_05_Codigo/assets/css/contacto.css
@@ -1,20 +1,22 @@
 footer {
   position: relative;
-  padding: 100px 0;
   background-color: var(--dark-bg-1);
 }
 
-footer .contact {
+.contact {
   width: 100%;
   display: flex;
   margin-bottom: 100px;
+  background-color: var(--dark-bg-1);
+  flex-wrap: wrap;
 }
 
-footer .contact .contact_form {
+.contact .contact_form {
+  padding: 100px 0;
   padding-left: calc(50% - 600px);
-  width: 600px;
+  width: 50%;
 }
-footer .contact .contact_form .section-title {
+.contact .contact_form .section-title {
   color: var(--white);
   font-family: "Raleway", sans-serif;
   font-size: 42px;
@@ -23,54 +25,78 @@ footer .contact .contact_form .section-title {
 
   text-transform: capitalize;
 }
-footer .contact .contact_form input {
+.contact .contact_form input {
   background: transparent;
   margin-right: 30px;
   margin-bottom: 30px;
   width: 230px;
 }
-footer .contact .contact_form textarea {
+.contact .contact_form textarea {
   background: transparent;
   margin-bottom: 30px;
   width: 495px;
 }
-footer .contact .contact_form input::placeholder,
-footer .contact .contact_form textarea::placeholder {
+.contact .contact_form input::placeholder,
+.contact .contact_form textarea::placeholder {
   color: var(--text-color-2);
   font-size: 12px;
   text-transform: uppercase;
 }
-footer .contact .contact_form button {
+.contact .contact_form button {
   width: 160px;
   display: block;
 }
 
-footer .contact .contact_content {
-  padding-left: 10%;
+.contact .contact_content {
+  position: relative;
+  padding: 100px 0;
+  background-size: cover;
+  background-image: url("../images/contact_img_1.jpg");
   width: 50%;
+  padding-left: 150px;
 }
-footer .contact .contact_content .section-title {
+
+.contact .contact_content .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.contact .contact_content .section-title {
   color: var(--white);
   font-family: "Raleway", sans-serif;
   font-size: 42px;
   font-weight: 700;
   text-transform: capitalize;
   margin-bottom: 30px;
+
+  position: relative;
+  z-index: 5;
 }
-footer .contact .contact_content address,
-footer .contact .contact_content h4 {
+.contact .contact_content address,
+.contact .contact_content h4 {
+
   font-style: normal;
   color: var(--text-color-2);
   margin-bottom: 15px;
+
+    position: relative;
+  z-index: 5;
 }
-footer .contact .contact_content .label {
+.contact .contact_content .label {
   display: flex;
   align-items: center;
   gap: 10px;
   text-transform: uppercase;
   color: var(--white);
+
+  position: relative;
+  z-index: 5;
 }
-footer .contact .contact_content .label .rectangle {
+.contact .contact_content .label .rectangle {
   display: block;
   height: 1px;
   width: 50px;
@@ -103,10 +129,10 @@ footer .social-bar .label a {
   font-size: 14px;
   margin-right: 20px;
 }
-footer .social-bar .label a:hover{
+footer .social-bar .label a:hover {
   color: var(--main-color);
 }
-footer .social-bar .label .rectangle{
+footer .social-bar .label .rectangle {
   display: block;
   height: 1px;
   width: 50px;
