--- a/Modulo_07/assets/sass/styles.scss
+++ b/Modulo_07/assets/sass/styles.scss
@@ -1,56 +1,50 @@
+@use "./components/header";
+@import "./helppers/variables";
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@import "./minireset.min.css";
-@import "./about.css";
-@import "./barbers.css";
-@import "./contacto.css";
-@import "./galery.css";
-@import "./header.css";
-@import "./jumbotron.css";
-@import "./services.css";
 
-:root {
-  --dark-bg-1:    #191c26;
-  --dark-bg-2:    #090B13;
-  --dark-bg-3:    #111319;
-  --light-gray:   #f7f7f7;
-  --main-color:   #ff6c00;
-  --text-color-1: #555555;
-  --text-color-2: #9DA4BD;
-  --text-color-2-12per: rgba(157, 164, 189, 0.12);
-  --text-color-2-60: rgba(157, 164, 189, 0.6);
-  --title-color:  #303030;
-  --white:        #ffffff;
-}
 *{
   scroll-behavior: smooth;
 }
+
 body {
   font-family: "Open Sans", sans-serif;
 }
+
 a{
   text-decoration: none;
 }
 
-.btn-dark{
-  background-color: transparent;
-  color: var(--white);
+
+.main-button{
+  background: $light-gray;
   cursor: pointer;
   font-size: 16px;
   border: solid 1px var(--main-color);
   border-radius: 25px;
   
   height: 40px;
-  text-transform: uppercase; 
+  text-transform: uppercase;
+  transition: all ease .2s;
   padding: 0 20px;
+} 
+.main-button-light{
+  border: solid 1px $main-color;
+  background-color: transparent;
+  color: $white;
 }
+.main-button-light:hover{
+  background-color: $main-color;
+  color: $white;
+}
+
+
 .btn-dark:hover{
   background-color: var(--main-color);
   color: var(--white);
 }
-
-.btn-light{
+.btn-light{     
   background-color: transparent;
   color: var(--title-color);
   cursor: pointer;
@@ -62,9 +56,5 @@ a{
   text-transform: uppercase; 
   padding: 0 20px;
 }
-.btn-light:hover{
-  background-color: var(--main-color);
-  color: var(--white);
-}
 
-
+ 
