--- a/Modulo_07/assets/sass/styles.scss
+++ b/Modulo_07/assets/sass/styles.scss
@@ -1,22 +1,31 @@
-@use "./components/header";  
+@use "./components/header";
 @use "./components/about";
-@use "./components/services"; 
+@use "./components/services";
+@use "./components/jumbotron";
+@use "./components/barbers";
 
-@import "./helppers/variables"; 
-@import "./helppers/mixins"; 
+@import "./helppers/variables";
+@import "./helppers/mixins";
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  scroll-behavior: smooth; 
+  scroll-behavior: smooth;
 }
 body {
   font-family: "Open Sans", sans-serif;
 }
 a {
   text-decoration: none;
-} 
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
 
 .main-button {
   background: $light-gray;
@@ -48,13 +57,12 @@ a {
     color: $white;
   }
 }
-
 .article-text {
   position: relative;
   margin-left: 80px;
   margin-top: 150px;
   width: 50%;
-  z-index: 10; 
+  z-index: 10;
 
   .article__label {
     @include d-flex(center, flex-start);
@@ -76,7 +84,7 @@ a {
   .article__label-hero {
     color: $text-color-2-60;
   }
-  .article__label-hero > .rectangle{
+  .article__label-hero > .rectangle {
     background-color: $text-color-2-60;
   }
 
